Work on screenshots.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -108,7 +108,7 @@
         </section>
 
         <section>
-            <h3>Repositories have issues</h3>
+            <h3>Issues</h3>
             <p class="fragment">Users can discuss and contribute via <em>issues</em></p>
             <p class="fragment">Think of <em>issues</em> as <em>discussion items</em> for</p>
             <ul class="fragment">
@@ -198,7 +198,7 @@
 
         <section>
             <h3>A sample profile</h3>
-            <img data-src="img/tenderlove_profile.png">
+            <img data-src="img/tenderlove_profile_circled.png">
         </section>
 
         <section>
