Finalize github presentation.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -81,9 +81,9 @@
             <p class="fragment"><i>Open source</i> refers to something that can be modified and shared publicly</p>
             <p class="fragment"><i>Open source software</i> is available for modification or enhancement by anyone</p>
             <ul class="fragment">
-                <li>Operating systems (Android, Linux)</li>
-                <li>Programming languages (Ruby, Swift, Java)</li>
-                <li>User applications (Firefox, OpenOffice)</li>
+                <li>Operating systems (Android)</li>
+                <li>Programming languages (Ruby, Swift)</li>
+                <li>User applications (Firefox)</li>
             </ul>
         </section>
 
@@ -120,7 +120,7 @@
 
         <section>
             <h3>Report <a target="_blank" href="https://github.com/hakimel/reveal.js/issues/1457">bugs</a></h3>
-            <img data-src="img/bug_report_via_issue_in_reveal_js_circled.png">
+            <img data-src="img/bug_report_via_issue_in_reveal_js.png">
         </section>
 
         <section>
@@ -141,12 +141,12 @@
 
         <section>
             <h3>Add a <a target="_blank" href="https://github.com/hakimel/reveal.js/pull/1074">feature</a></h3>
-            <img data-src="img/add_feature_via_pull_request_circled.png">
+            <img data-src="img/add_feature_via_pull_request.png">
         </section>
 
         <section>
             <h3>Add a <a target="_blank" href="https://github.com/hakimel/reveal.js/pull/1074/files">feature (continued)</a></h3>
-            <img data-src="img/pull_request_changes_in_reveal_js_circled.png">
+            <img data-src="img/pull_request_changes_in_reveal_js.png">
         </section>
 
         <section>
@@ -165,7 +165,7 @@
 
         <section>
             <h3>github gives them recognition from their peers (e.g. via stars)</h3>
-            <img data-src="img/reveal_js_repository_stars_circled.png">
+            <img data-src="img/reveal_js_repository_stars.png">
         </section>
 
         <section>
@@ -198,7 +198,7 @@
 
         <section>
             <h3>A sample profile</h3>
-            <img data-src="img/tenderlove_profile_circled.png">
+            <img data-src="img/tenderlove_profile.png">
         </section>
 
         <section>
@@ -213,7 +213,7 @@
 
         <section>
             <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a></h3>
-            <img data-src="img/tenderlove_repositories_circled.png">
+            <img data-src="img/tenderlove_repositories.png">
         </section>
 
         <section>
