Fix "Who am I?" alignment.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -49,9 +49,9 @@
                 <li>Berlin, Germany</li>
                 <li>Director of Engineering @ Blacklane</li>
                 <li>Part of the <a target="_blank" href="https://github.com/troessner/reek">Reek</a> and <a
-                        target="_blank" href="https://github.com/whitesmith/rubycritic">RubyCritic</a> core team (hosted
-                    @ github)
+                        target="_blank" href="https://github.com/whitesmith/rubycritic">RubyCritic</a> core team
                 </li>
+                <li>Both of which are hosted at github</li>
                 <li>Technical advisor for honeypot</li>
             </ul>
         </section>
